# axum-practice

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: always_error.rs  firestore_response.rs  get_json.rs  hello_world.rs  mirror_body_json.rs  mirror_custom_header.rs  mod.rs  returns_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
src/utils/: app_error.rs
