[package]
name = "demo-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers", "macros"] }

tower = "0.4.13"

hyper = { version = "0.14.23", features = ["full"] }

tokio = { version = "1.23.0", features = ["full"]}

serde = { version = "1.0.151", features=["derive"]}

serde_json = "1.0.91"
tower-http = { version = "0.3.5", features=["cors"]}

firestore = "0.25"
